Fixed line height on mobile

--- a/addressbook.css
+++ b/addressbook.css
@@ -508,7 +508,9 @@ body {
     }
 
     .results div {
+        height: 120px;
         font-size: 40px;
-        padding: 20px;
+        line-height: 120px;
+        padding: 0px;
     }
 }
